--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "main": "server.js",
   "dependencies": {
     "express": "^4.12.3",
+    "promise": "^7.0.4",
     "swagger-express-mw": "0.0.x",
     "underscore": "^1.8.3"
   },
