--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,9 @@
     "Chart.js": "chartjs#~1.0.2",
     "angular-chart": "~0.3.2",
     "Chart": "chart#*",
-    "jquery": ">=1.11.0"
+    "jquery": ">=1.11.0",
+    "angular-material": "^1.0.6",
+    "angular-animate": "^1.5.2",
+    "angular": "^1.5.2"
   }
 }
