--- a/bower.json
+++ b/bower.json
@@ -22,6 +22,8 @@
     "jquery": ">=1.11.0",
     "angular-material": "^1.0.6",
     "angular-animate": "^1.5.2",
-    "angular": "^1.5.2"
+    "angular": "^1.5.2",
+    "angular-simple-logger": "^0.1.7",
+    "angular-google-maps": "^2.3.2"
   }
 }
