--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "license": "",
   "main": "server.js",
   "dependencies": {
+    "body-parser": "^1.15.1",
     "express": "^4.12.3",
     "promise": "^7.0.4",
     "swagger-express-mw": "0.0.x",
