--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "dependencies": {
     "body-parser": "^1.15.1",
     "express": "^4.12.3",
+    "jasmine-node": "^1.14.5",
     "mongoose": "^4.11.0",
     "morgan": "^1.8.2",
     "request": "^2.81.0",
+    "request-promise": "^4.2.1",
     "underscore": "^1.8.3"
   },
   "repository": {
@@ -20,6 +22,7 @@
     "url": "git+https://github.com/Max95474/OpenDataVisualizer.git"
   },
   "scripts": {
-    "start": "node server/app.js"
+    "start": "node server/app.js",
+    "test": "./node_modules/.bin/jasmine-node spec"
   }
 }
