--- a/bower.json
+++ b/bower.json
@@ -22,6 +22,7 @@
     "angular": "^1.5.2",
     "angular-simple-logger": "^0.1.7",
     "angular-google-maps": "^2.3.2",
-    "angular-ui-router": "^0.3.0"
+    "angular-ui-router": "^0.3.0",
+    "angular-resource": "^1.6.5"
   }
 }
