--- a/package.json
+++ b/package.json
@@ -8,6 +8,14 @@
   "license": "",
   "main": "server.js",
   "dependencies": {
+    "angular": "^1.6.5",
+    "angular-animate": "^1.6.5",
+    "angular-aria": "^1.6.5",
+    "angular-material": "^1.1.4",
+    "angular-resource": "^1.6.5",
+    "angular-ui-router": "^1.0.3",
+    "babel-core": "^6.25.0",
+    "babel-loader": "^7.1.1",
     "body-parser": "^1.15.1",
     "express": "^4.12.3",
     "jasmine-node": "^1.14.5",
@@ -15,7 +23,8 @@
     "morgan": "^1.8.2",
     "request": "^2.81.0",
     "request-promise": "^4.2.1",
-    "underscore": "^1.8.3"
+    "underscore": "^1.8.3",
+    "webpack": "^3.0.0"
   },
   "repository": {
     "type": "git",
