--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
     "body-parser": "^1.15.1",
+    "css-loader": "^0.28.4",
     "express": "^4.12.3",
     "jasmine-node": "^1.14.5",
     "mongoose": "^4.11.0",
     "morgan": "^1.8.2",
     "request": "^2.81.0",
     "request-promise": "^4.2.1",
+    "style-loader": "^0.18.2",
     "underscore": "^1.8.3",
     "webpack": "^3.0.0"
   },
