--- a/package.json
+++ b/package.json
@@ -13,18 +13,21 @@
     "angular-aria": "^1.6.5",
     "angular-material": "^1.1.4",
     "angular-resource": "^1.6.5",
+    "angular-route": "^1.6.5",
     "angular-ui-router": "^1.0.3",
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
     "body-parser": "^1.15.1",
     "css-loader": "^0.28.4",
     "express": "^4.12.3",
+    "jasmine-core": "^2.6.4",
     "jasmine-node": "^1.14.5",
     "mongoose": "^4.11.0",
     "morgan": "^1.8.2",
     "request": "^2.81.0",
     "request-promise": "^4.2.1",
     "style-loader": "^0.18.2",
+    "translit-english-ukrainian": "^1.0.1",
     "underscore": "^1.8.3",
     "webpack": "^3.0.0"
   },
@@ -35,5 +38,14 @@
   "scripts": {
     "start": "node server/app.js",
     "test": "./node_modules/.bin/jasmine-node spec"
+  },
+  "devDependencies": {
+    "angular-mocks": "^1.6.5",
+    "jasmine-core": "^2.6.4",
+    "karma": "^1.7.0",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-jasmine": "^1.1.0",
+    "karma-ng-html2js-preprocessor": "^1.0.0",
+    "karma-webpack": "^2.0.4"
   }
 }
