--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "style-loader": "^0.18.2",
     "translit-english-ukrainian": "^1.0.1",
     "underscore": "^1.8.3",
-    "webpack": "^3.0.0"
+    "webpack": "^3.0.0",
+    "xml2js": "^0.4.17"
   },
   "repository": {
     "type": "git",
