--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "angular-material": "^1.1.4",
     "angular-resource": "^1.6.5",
     "angular-route": "^1.6.5",
+    "angular-ui-bootstrap": "^2.5.6",
     "angular-ui-router": "^1.0.3",
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
     "body-parser": "^1.15.1",
+    "bootstrap": "^3.3.7",
     "css-loader": "^0.28.4",
     "express": "^4.12.3",
     "jasmine-core": "^2.6.4",
